<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2015-present, Parse, LLC.
  ~ All rights reserved.
  ~
  ~ This source code is licensed under the BSD-style license found in the
  ~ LICENSE file in the root directory of this source tree. An additional grant
  ~ of patent rights can be found in the PATENTS file in the same directory.
  -->
<resources>
    <string name="parse_app_id">myappID</string>
    <string name="parse_client_key">v5CPKsQ7snDd</string>

    <string name="app_name">Instagram</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_rider">Map</string>
    <string name="title_activity_driver_location">Map</string>

    <string name="username">Phone number, email address or username</string>
    <string name="password">Password</string>
    <string name="loginButton">Log In</string>
    <string name="signUp">Don\'t have an account? Sign up.</string>
    <string name="forgetPassLink">Forgotten your login details? Get help with logging in.</string>
    <string name="log_in_with_facebook">Log In With Facebook</string>
    <string name="or">OR</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_address">Email Address</string>
    <string name="you_can_always_change_it_later">You can always change it later</string>
    <string name="choose_username">Choose username</string>
</resources>
