<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signUp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <TextView
        android:id="@+id/chooseUName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/choose_username"
        android:textColor="#000000"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/canChangeLater"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/you_can_always_change_it_later"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/chooseUName"
        app:layout_constraintStart_toStartOf="@id/chooseUName"
        app:layout_constraintTop_toBottomOf="@id/chooseUName" />

    <EditText
        android:id="@+id/newUsrName"
        style="@style/inputStyle"
        android:layout_width="0dp"
        android:autofillHints="AUTOFILL_HINT_NEW_USERNAME"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/canChangeLater" />

    <EditText
        android:id="@+id/emailText"
        style="@style/inputStyle"
        android:autofillHints="AUTOFILL_HINT_EMAIL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newUsrName" />

    <EditText
        android:id="@+id/passText"
        style="@style/inputStyle"
        android:layout_width="0dp"
        android:autofillHints="AUTOFILL_HINT_NEW_PASSWORD"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailText" />

    <EditText
        android:id="@+id/confPassText"
        style="@style/inputStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:autofillHints="AUTOFILL_HINT_NEW_PASSWORD"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passText" />

    <Button
        android:id="@+id/signUpButton"
        style="@style/loginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:clickable="false"
        android:onClick="signUp"
        android:paddingVertical="12dp"
        android:text="@string/sign_up"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/newUsrName"
        app:layout_constraintStart_toStartOf="@id/newUsrName"
        app:layout_constraintTop_toBottomOf="@id/confPassText" />

</androidx.constraintlayout.widget.ConstraintLayout>